tests/baselines/reference/generatorTypeCheck31.errors.txt
generatorTypeCheck31.ts(2,11): error TS2322: Type 'Generator<(x: any) => any, void, unknown>' is not assignable to type '() => Iterable<(x: string) => number>'.
  Type 'Generator<(x: any) => any, void, unknown>' provides no match for the signature '(): Iterable<(x: string) => number>'.


==== generatorTypeCheck31.ts (1 errors) ====
    function* g2(): Iterator<() => Iterable<(x: string) => number>> {
        yield function* () {
              ~~~~~~~~~~~~~~
            yield x => x.length;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        } ()
    ~~~~~~~~
!!! error TS2322: Type 'Generator<(x: any) => any, void, unknown>' is not assignable to type '() => Iterable<(x: string) => number>'.
!!! error TS2322:   Type 'Generator<(x: any) => any, void, unknown>' provides no match for the signature '(): Iterable<(x: string) => number>'.
    }